tests/jastadd/negative/name_errors/L1/2_UnknownTypeName.ob
MODULE TestModule;
	TYPE t = INT;
END TestModule.
